﻿2019/06/17　ver1.3.5
HighDPI

2019/02/12 ver1.3.4
日本語化

2019/02/11 ver1.3.3
スピードアップ、ブラウザステート

2019/02/11 ver1.3.2
重複するアイテムを発見

ボタンの位置
2019/02/11 ver1.3.1
ボタンの位置

2018/08/26 ver1.2
Cropボタンを追加

2017/12/07 ver1.1
ステータスバーのアイテム個数表示を右側へ移動してブラウザのステータスが見えるようにした。

2017/10/15 ver1.0