@@ -19,7 +19,7 @@ namespace printurls.Properties {
     // class via a tool like ResGen or Visual Studio.
     // To add or remove a member, edit your .ResX file then rerun ResGen
     // with the /str option, or rebuild your VS project.
-    [global::System.CodeDom.Compiler.GeneratedCodeAttribute("System.Resources.Tools.StronglyTypedResourceBuilder", "4.0.0.0")]
+    [global::System.CodeDom.Compiler.GeneratedCodeAttribute("System.Resources.Tools.StronglyTypedResourceBuilder", "16.0.0.0")]
     [global::System.Diagnostics.DebuggerNonUserCodeAttribute()]
     [global::System.Runtime.CompilerServices.CompilerGeneratedAttribute()]
     internal class Resources {
@@ -93,6 +93,15 @@ namespace printurls.Properties {
         internal static string DUPITEM_FOUND {
             get {
                 return ResourceManager.GetString("DUPITEM_FOUND", resourceCulture);
+            }
+        }
+        
+        /// <summary>
+        ///   Looks up a localized string similar to Failed to save ini..
+        /// </summary>
+        internal static string FAILED_TO_SAVE_INI {
+            get {
+                return ResourceManager.GetString("FAILED_TO_SAVE_INI", resourceCulture);
             }
         }
         
