@@ -129,6 +129,9 @@
   <data name="DUPITEM_FOUND" xml:space="preserve">
     <value>First duplicating items found and selected.</value>
   </data>
+  <data name="FAILED_TO_SAVE_INI" xml:space="preserve">
+    <value>Failed to save ini.</value>
+  </data>
   <data name="INTERVAL_WAIT" xml:space="preserve">
     <value>Interval Wait: </value>
   </data>
